<resources>
    <string name="app_name">LoQuiero</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="fill_registration_form">Rellena los campos</string>
    <string name="register">Registrarse</string>
    <string name="short_password_error">Tiene menos de 6 caracteres</string>
    <string name="password_dont_match_error">Contraseñas no son iguales</string>
    <string name="email_format_error">Formato Incorrecto</string>
    <string name="problem_try_again">Hubo un problema, intenta de nuevo</string>
    <string name="login_title">Login</string>
    <string name="login">login</string>
    <string name="register_option">O puedes resgistarte aqui</string>
    <string name="product">Producto</string>
    <string name="photo_message">Pincha aqui para agregar foto</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="add_product">Añadir producto</string>
    <string name="product_added">Se agrego el producto</string>
    <string name="user_products">Mis productos</string>
    <string name="delete">Eliminar</string>
    <string name="confirm_delete_item_title">¿Estas seguro?</string>
    <string name="confirm_delete_item_message">Estas seguro que deseas eliminar este producto?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="product_deleted">Se ha borrado el producto</string>
    <string name="image_test">https://picsum.photos/200</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="search">Buscar</string>
    <string name="profile">Mi Perfil</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="postal_code">Código postal</string>
    <string name="phone_number">Telefóno</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="profile_saved">Datos guardados</string>
    <string name="buy">Comprar</string>
    <string name="pay">Pagar</string>
    <string name="stripe_key">pk_test_a8VQpTd59TPYz5Lr878GXdU3005c079m2m</string>
    <string name="payment_method">Método de pago</string>
    <string name="signOut">Cerrar sesión</string>
</resources>
