<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.ferdyrodriguez.loquiero.usecases.addproduct.AddProductViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".usecases.addproduct.AddProductActivity">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp"/>

        <include
                layout="@layout/toolbar"
                android:id="@+id/baseToolbar"/>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/baseToolbar"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"
                app:layout_constraintBottom_toTopOf="@id/addProductBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/inner_start_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="12dp"/>

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/inner_end_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="12dp"/>

                <TextView
                        android:id="@+id/productHeader"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/product"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/inner_start_guideline"
                        app:layout_constraintEnd_toStartOf="@id/inner_end_guideline"/>

                <View
                        android:id="@+id/photoBorder"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/photo_border"
                        app:layout_constraintTop_toBottomOf="@id/productHeader"
                        app:layout_constraintStart_toEndOf="@id/inner_start_guideline"
                        app:layout_constraintEnd_toStartOf="@id/inner_end_guideline"/>

                <TextView
                        android:id="@+id/photoMessage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_message"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toTopOf="@id/photoBorder"
                        app:layout_constraintStart_toStartOf="@id/photoBorder"
                        app:layout_constraintEnd_toEndOf="@id/photoBorder"
                        app:layout_constraintBottom_toBottomOf="@id/photoBorder"/>

                <ImageView
                        android:id="@+id/productPhoto"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="@id/photoBorder"
                        app:layout_constraintStart_toStartOf="@id/photoBorder"
                        app:layout_constraintEnd_toEndOf="@id/photoBorder"
                        app:layout_constraintBottom_toBottomOf="@id/photoBorder"
                        tools:src="@tools:sample/backgrounds/scenic"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/titleLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="18dp"
                        android:hint="@string/title"
                        app:counterEnabled="true"
                        app:counterMaxLength="40"
                        app:layout_constraintTop_toBottomOf="@+id/productPhoto"
                        app:layout_constraintStart_toEndOf="@id/inner_start_guideline"
                        app:layout_constraintEnd_toStartOf="@id/inner_end_guideline">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@={ viewModel.title }"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="18dp"
                        android:hint="@string/description"
                        app:counterEnabled="true"
                        app:counterMaxLength="200"
                        app:layout_constraintTop_toBottomOf="@+id/titleLayout"
                        app:layout_constraintStart_toEndOf="@id/inner_start_guideline"
                        app:layout_constraintEnd_toStartOf="@id/inner_end_guideline">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@={ viewModel.description }"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/priceLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="18dp"
                        android:hint="@string/price"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
                        app:layout_constraintStart_toEndOf="@id/inner_start_guideline"
                        app:layout_constraintEnd_toStartOf="@id/inner_end_guideline">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="numberDecimal"
                            android:text="@={ viewModel.price }"/>

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/addProductBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/add_product"
                android:enabled="@{ viewModel.formIsValid ? true : false }"
                android:onClick="@{ () -> viewModel.addProduct() }"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>